[tool.poetry]
name = "ccass"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
lxml = "^5.1.0"
requests = "^2.31.0"
pandas = "^2.2.0"
tenacity = "^8.2.3"
pyarrow = "^15.0.0"
boto3 = "^1.34.38"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
