[tool.poetry]
name = "hk_tradable_stocks"
version = "0.1.0"
description = ""
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
boto3 = "^1.34.38"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
